refactor: DroneMissionResult에서 missionId 필드 제거 및 연관관계로 대체